--- a/css/styles.css
+++ b/css/styles.css
@@ -16,19 +16,22 @@ body{
 }
 
 .container-1{
-    /* front page general styling */
-    width: 75%;
-    margin: auto;
-
+    background: lightgreen;
+    padding: 16px;
+    margin: 5px;
+    border: 4px solid black;
+    gap: 8px;
+    display: flex;
+    border-radius: 20px;
 }
 
-.box-1{
+.box-1, .box-2{
     /* palette */
-    background-color: teal;
-    color: black solid;
+    background-color: mistyrose;
 
     /* border styling */
     border: 5px;
+    border-color: blue solid;
     border-width: 10px;
     border-radius: 20px;
 
@@ -36,15 +39,17 @@ body{
     padding: 20px;
     margin: 20px 0;
 
-    display: flex;
+    display: block;
     width: 80%;
     margin: auto;
 
     /* text location */
     align-items: center;
     justify-content: center;
+    flex: 1 1 0%;
 
 }
+
 .box-1 h1{
     margin: 10px;
 }
@@ -199,6 +204,8 @@ body{
           transform: rotate(360deg);
       }
   }
+
+  /* todo: emoji to "stars" */
   @counter-style emoji-1 {
     system: cyclic;
     symbols: "\1F32E";
@@ -207,4 +214,22 @@ body{
 
 #emoji::before{
      content: \1F32E;
+ }
+
+ /* Navigation menu */
+ .topnav{
+     background-color: lightgreen;
+     overflow: hidden;
+     margin: 5px;
+     border-radius: 20px;
+ }
+ .topnav a{
+     float: left;
+     color: #f2f2f2;
+     margin: 5px;
+     padding: 5px;
+     border: #f2f2f2;
+     background-color: black;
+     border-radius: 10px;
+
  }
